fixed the contrast of the Smiley Face in the Hero animation.

--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -398,7 +398,8 @@ a {
     position: absolute;
     width: 30px;
     height: 50px;
-    background: var(--dark);
+    background: #000000;
+    /* Always black on yellow face */
     border-radius: 50px;
     top: 30%;
 }
@@ -418,7 +419,8 @@ a {
     transform: translateX(-50%);
     width: 120px;
     height: 60px;
-    border-bottom: 12px solid var(--dark);
+    border-bottom: 12px solid #000000;
+    /* Always black on yellow face */
     border-radius: 0 0 70px 70px;
 }
 
